// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconContainer should be rendered correctly 1`] = `
<div
  className="container uui-icon uui-enabled icon-container-color-default root"
  style={Object {}}
>
  <svg
    className=""
  />
</div>
`;

exports[`IconContainer should be rendered correctly with props 1`] = `
<div
  className="container uui-icon uui-enabled -clickable icon-container-color-blue root"
  onClick={[Function]}
  style={Object {}}
  tabIndex={0}
>
  <svg
    className="flipY rotate-90ccw"
    height={36}
    width={36}
  />
</div>
`;
